--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,22 @@
 Package: PAMcorrection
-Title: What the Package Does (One Line, Title Case)
+Title: Package for PAM correction
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Andreas",
+           family = "Schönberg",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+           email = "Schoenb4@students.uni-marburg.de")
+Description: Tool for PAM correction.
+License: gpl3
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.1.1
+Depends: 
+    R (>= 2.10)
+Imports:
+    
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
