--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,11 +12,7 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Depends: 
-    R (>= 2.10)
-Imports:
-    
-Suggests: 
-    knitr,
+Depends: R (>= 2.10)
+Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
